# metamorph

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
apps/api/: package.json  prisma.config.ts  tsconfig.build.json
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  main.ts
apps/web/: package.json
apps/worker-llm/: Dockerfile  package.json
apps/worker-playwright/: Dockerfile  package.json  tsconfig.json
docs/slr/: .env.example  .gitignore  README.md  pyproject.toml
docs/slr/bibs/: acm.bib  anchors.bib  arxiv.bib  ieeexplore.bib
docs/slr/prompts/: screen_system.txt
docs/slr/src/slr/: __init__.py  bib_parser.py  cli.py  dedupe.py  export.py  llm_screen.py  models.py  normalize.py  prisma.py  triage.py
infra/rabbitmq/: definitions.json  rabbitmq.conf
scripts/: discover-docker.sh  e2e-explore.mjs  export-explore-graph.ts  export-session-report.mjs
scripts/report/: export-explore-graph.ts
scripts/testing/: e2e-explore.mjs
scripts/validation/: api.ts  cli.ts  config.ts  csv.ts  env.ts  extract-metrics.ts  generate-summary.ts  llm-pricing.test.ts  llm-pricing.ts  manifest.ts  metrics-rq1.ts  metrics-rq2.ts  metrics-rq3.ts  mr-quality-export.test.ts  mr-quality-export.ts  paths.ts  poll.ts  prisma.ts  replay-consistency.test.ts  replay-consistency.ts  run-batch.ts  run-replay.ts  stats.test.ts  stats.ts  summary-format.test.ts  summary-format.ts  verdict-triage-export.test.ts  verdict-triage-export.ts
(+267 files in other folders)
