[project]
name = "slr"
version = "0.1.0"
description = "Systematic mapping study toolkit for Metamorph TFM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bibtexparser>=1.4.3",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.10.0",
    "typer>=0.15.0",
]

[project.scripts]
slr = "slr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slr"]

[tool.uv]
package = true
